--- a/package.json
+++ b/package.json
@@ -23,5 +23,15 @@
   "bugs": {
     "url": "https://github.com/chrisbull/svg-to-react-native-cli/issues"
   },
-  "homepage": "https://github.com/chrisbull/svg-to-react-native-cli#readme"
+  "homepage": "https://github.com/chrisbull/svg-to-react-native-cli#readme",
+  "bin": {
+    "svg-to-rn": "./index.js"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "htmltojsx": "^0.3.0",
+    "jsdom-no-contextify": "^3.1.0",
+    "svg-to-jsx": "^0.0.21",
+    "yargs": "^6.5.0"
+  }
 }
