--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "yargs": "^6.5.0"
   },
   "scripts": {
-    "test": "node index.js ./src/test-svgs/test TestSvg --output ./src/test-svgs/"
+    "test": "node index.js ./src/test-svgs/test TestSvg --output ./src/test-svgs/",
+    "testdir": "node index.js --dir ./src/test-svgs/ --output ./src/test-svgs/"
   },
   "repository": {
     "type": "git",
