--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "htmltojsx": "^0.3.0",
     "jsdom-no-contextify": "^3.1.0",
     "svg-to-jsx": "^0.0.21",
+    "tinycolor2": "^1.4.1",
     "yargs": "^6.5.0"
   },
   "scripts": {
@@ -32,5 +33,5 @@
   "homepage": "https://github.com/pgalchemy/svg-to-react-native-cli#readme",
   "bin": {
     "svg-to-react-native": "./index.js"
-  } 
+  }
 }
