--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "yargs": "^6.5.0"
   },
   "scripts": {
-    "test": "mocha",
-    "testsvg": "node index.js ./src/test-svgs/test TestSvg --output ./src/test-svgs/ --force",
+    "test": "node index.js ./src/test-svgs/test TestSvg --output ./src/test-svgs/ --force && mocha",
     "testdir": "node index.js --dir ./src/test-svgs/ --output ./src/test-svgs/ --force",
+    "updatesvgsnapshot": "node index.js ./src/test-svgs/test TestSvg --output ./src/test-svgs/snapshots/ --force",
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once --pro"
   },
@@ -38,8 +38,10 @@
     "svg-to-react-native": "./index.js"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "semantic-release": "^15.10.6",
+    "stream-equal": "^1.1.1",
     "travis-deploy-once": "^5.0.9"
   }
 }
