--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pgprojectx/svg-to-react-native-cli",
-  "version": "0.0.0-development",
+  "version": "1.0.4",
   "description": "Based on svg-to-react-cli. A command line utility that takes a svg image file and outputs a fully formatted stateless functional React Native component with `height`, `width`, `opacity` and `style` for props. With flags to toggle formatting and remove style attributes.",
   "main": "index.js",
   "dependencies": {
